<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/img_patient"
        android:layout_width="256px"
        android:layout_height="256px"
        android:background="@drawable/wheelchair_blue_256px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/login_name"
        android:layout_below="@id/img_patient"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_bg"
        android:textSize="20sp"
        android:textColor="#000000"
        android:hint="@string/userHint"
        android:textColorHint="#F5F5F5"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_below="@id/login_name"
        android:background="@drawable/text_bg"
        android:textSize="20sp"
        android:textColor="#000000"
        android:hint="@string/passHint"
        android:textColorHint="#F5F5F5"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pass"
        android:background="@drawable/login_button_selector"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/register"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="#00ACED"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>