<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_doc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/simpleWhite">

    <LinearLayout
        android:background="@color/simpleWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/search_doc"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/doc_username"
                android:background="@drawable/text_bg"
                android:hint="@string/search_doc_hint"
                android:layout_alignParentStart="true"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/search_doc_btn"
                android:text="@string/search"
                android:textColor="@color/white"
                android:background="@drawable/login_button_selector"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/search_fail"
        android:text="@string/search_fail_hint"
        android:textColor="@color/gray"
        android:visibility="invisible"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/doc_item"
        android:visibility="invisible"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/doc_img"
                android:background="@drawable/doctor_blue_256px"
                android:layout_width="64dp"
                android:layout_height="64dp" />

            <RelativeLayout
                android:id="@+id/doc_msg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:text="姓名"
                    android:id="@+id/doc_name"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="所在醫院"
                    android:id="@+id/doc_hospital"
                    android:textSize="15sp"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="right|center_vertical">
                <Button
                    android:id="@+id/add"
                    android:text="添加"
                    android:textColor="@color/white"
                    android:background="@drawable/add_button_selector"
                    android:layout_width="60dp"
                    android:layout_height="40dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/add_doc_done"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textColor="@color/gray"
        android:text="@string/add_doc_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/next"
            android:text="@string/next"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:background="@drawable/login_button_selector"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>